changes in first page

--- a/index.html
+++ b/index.html
@@ -66,6 +66,22 @@
           </div>
           <div class="col-xs-6 col-md-4 audio-control">
             <audio controls id="my_audio">
+                <a id="next-bt" href="#">
+<div class="player-musicnav-ff-column3">
+    <ul class="musicnav-ff">
+        <li class="ff">NEXT</li>
+    </ul>
+</div>
+</a>
+
+<a id="prev-bt" href="#">
+<div class="player-musicnav-ff-column3">
+    <ul class="musicnav-ff">
+        <li class="ff">PREV</li>
+    </ul>
+</div>
+</a>
+
             </audio>
           </div>
         </div>
